@@ -6,6 +6,9 @@ libdebian-installer (0.29+0.30.unreleased) UNRELEASED; urgency=low
     - Add di_exec_path(_full) (execvp wrapper).
   * Joey Hess
     - Patch log.c to build under gcc 4.0. Closes: #287384
+  * Colin Watson
+    - doxygen doesn't work yet on the Hurd, so avoid building documentation
+      there.
 
  -- Bastian Blank <waldi@debian.org>  Sat, 18 Sep 2004 11:44:17 +0200
 
